--- a/week2/index.html
+++ b/week2/index.html
@@ -1,71 +1,112 @@
+<!--
+ Copyright (c) 2018 ml5
+ 
+ This software is released under the MIT License.
+ https://opensource.org/licenses/MIT
+-->
+
 <html>
 
 <head>
   <meta charset="UTF-8">
-  <title>Second Week</title>>
+  <title>PoseNet with KNN Classification on Webcam Images. Built with p5.js</title>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js"></script>
   <script src="https://unpkg.com/ml5@0.1.2/dist/ml5.min.js" type="text/javascript"></script>
-
+  <link href="hover.css" rel="stylesheet" media="all">
   <style>
+  
+  body{
+    padding: 0 90px;
+    text-align: center;
+    background-color: pink;
+  }
   button {
     margin: 6px 6px 6px 0;
-    padding: 4px;
     font-size: 14px;
+    border-radius: 25px;
+    border: none;
+    color: rgb(96, 96, 96);
   }
   video {
     width: 300;
     height: 300;
   }
   p {
+    font-family: monospace;
     display: inline;
     font-size: 16px;
+    color:darkorchid;
   }
   .emoji {
     font-size: 24px;
+  }
+  .hvr-grow{
+    padding: 10px 10px 14px 20px;
+  }
+  .rabbit{
+    float: left;
+    width: 50%;
+  }
+
+  .pig{
+    float: left;
+    width: 50%;
+  }
+  #buttonPredict{
+    text-align: center;
+    font-size: 20px;
+    font-style: oblique;
+    height: 15%;
+    border-radius: 50%;
+    color: indianred;
+  }
+  #clearAll{
+    margin-top: 50px;
+    border: 0;
+    padding: 0;
+    background: none;
+  }
+  canvas{
+    margin-bottom: -100px;
+    border: 40px solid lightblue;
+  }
+  #resetA, #resetB{
+    border:0;
+    background:none;
+    
   }
   </style>
 </head>
 
 <body>
-  <h2>KNN Classification on Webcam Images with mobileNet. Built with p5.js</h2>
+ 
   <div id="videoContainer"></div>
-  <p id="status">Loading Model...</p>
-  <div>
-    <button id="load">Load Dataset</button><br>
-    <p>If you load this sample classifer dataset. Try to make rock, paper, or scissor gestures to see if the classifier can class them.<br>
-      If this sample dataset doesn't work well for you, you could train your own classifier,<br>
-      and use the 'Save Dataset' button below to create your own myKNNDataset.json file,<br>
-      and replace the myKNNDataset.json in this folder.'
-    </p>
+  <br>
+  <button id="buttonPredict" class="hvr-buzz">START<br>PREDICTING!</button><br>
+  <div class="rabbit">
+    <button id="addClassA" class="hvr-grow">Add an Example to 🐰</button>
+    <button id="resetA"><u>Reset</u> 🐰</button><br>
+    <p><span id="exampleA">0</span> 🐰 </p>
+    <p><br> Confidence in 🐰 is: <span id="confidenceA">0</span></p>
   </div>
-  <br><p>
-    <span class="emoji"> ✊ </span><button id="addClassRock">Add an Example to Class Rock</button>
-    <button id="resetRock">Reset Class Rock</button>
-    <p><span id="exampleRock">0</span> Rock examples</p>
-    <p>| Confidence in Rock is: <span id="confidenceRock">0</span></p>
+  <div class="pig">
+      <button id="addClassB" class="hvr-grow">Add an Example to 🐷</button>
+      <button id="resetB"><u>Reset</u> 🐷</button><br>
+      <p><span id="exampleB">0</span> 🐽</p>
+      <p><br> Confidence in 🐷 is: <span id="confidenceB">0</span></p>
+  </div>
 
-    <br><span class="emoji"> 🖐 </span><button id="addClassPaper">Add an Example to Class Paper</button>
-    <button id="resetPaper">Reset Class Paper</button>
-    <p><span id="examplePaper">0</span> Paper examples</p>
-    <p>| Confidence in Paper is: <span id="confidencePaper">0</span></p>
-
-    <br><span class="emoji"> ✌️ </span><button id="addClassScissor">Add an Example to Class Scissor</button>
-    <button id="resetScissor">Reset Class Scissor</button>
-    <p><span id="exampleScissor">0</span> Scissor examples</p>
-    <p>| Confidence in Scissor is: <span id="confidenceScissor">0</span></p>
-  </p>
   <br/>
   <p>
-    <button id="buttonPredict">Start predicting!</button><br>
     <button id="clearAll">Clear all classes</button><br>
   </p>
-  <p>
-    KNN Classifier with mobileNet model labeled this
-    as Class: <span id="result">...</span>
-    with a confidence of <span id="confidence">...</span>
-  </p>
-  <div><button id="save">Save Dataset</button></div>
+  <p style="display:none">
+      KNN Classifier with mobileNet model labeled this
+      as Class: <span id="result">...</span>
+      with a confidence of <span id="confidence">...</span>
+    </p>
   <script src="sketch.js"></script>
 </body>
 
